			Java Electric change log ( MAIN branch )

NOTE: Please place changes under the version that will be released next.

************************* Version 8.04q: *********************************

BUG: (6/9/06, GVG) Bogus min area drc errors reported on dp_stageN{lay} (Bug #1111).
Problem: the abort signal given by user was not considered when leaving the cell using the enumerator.
FIX: Extra condition added.

BUG: (6/8/06, DN) Duisplay mode isn't chang immediiately.
FIX: Call EditWindow.displayAlgorithmChanged() from DIsplayControlTab.

BUG: (6/8/06, DN) Export->ReExport* broken (Bug #1107).
FIX: In PortInst.hasConnections().

IMP/MAN: (6/8/06, GVG) Electric needs a way to cycle through windows (bug #954)
Final solution in CVS. Cycle through all WindowFrame windows + messages window
added as dynamic message.

BUG: (6/8/06, SMR) Too much selected after "Up Hierarchy" (Bug #1105).
FIX: In EditWindow.upHierarchy(), set selection only if no previous cell
     history found.  In WindowFrame.setCellByHistory(), set only port
     or highlights, but not both.

BUG: (6/8/06, SMR) "Show ports on node" and other export highlighting
     crops text on the right side (Bug #1030).
FIX: In ExportChanges.showPortsAndExports(), draw text better.

BUG: (6/8/06, GVG) Waveform viewer does not display DC signals from EPIC output (Bug#1103)
FIX: Wrong boundary condition for end point events.

BUG/MAN: (6/8/06, GVG) exception when refining object selection in layout (Bug #1106)
FIX: detecting if currentChangeTypes array is null. Extra: typesafe enum added
and rotation information is shown.

BUG: (6/7/06, SMR) Initial splash window obscures everything (Bug #822).
FIX: Splash window no longer insists on being topmost.

BUG: (6/7/06, SMR) "Up hierarchy" always shows a full-screen view (Bug #1099)
FIX: In EditWindow.setCell(), only fill the screen if no context.

BUG: (6/7/06, SMR) Inserting a "T" in an arc triggers mimic deletion of the
     arc (Bug #1101).